Updated all references to drawable/logo to drawable/forgerock_logo

--- a/app/src/main/res/layout/delete.xml
+++ b/app/src/main/res/layout/delete.xml
@@ -27,7 +27,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/logo" />
+                android:src="@drawable/forgerock_logo" />
 
             <LinearLayout
                 android:layout_width="match_parent"
