--- a/app/src/main/res/layout/token.xml
+++ b/app/src/main/res/layout/token.xml
@@ -31,7 +31,7 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:layout_gravity="left"
-        android:src="@drawable/logo"
+        android:src="@drawable/forgerock_logo"
         android:scaleType="fitCenter"
         />
 
