--- a/app/src/main/res/layout/scan.xml
+++ b/app/src/main/res/layout/scan.xml
@@ -28,7 +28,7 @@
         android:layout_height="match_parent"
         />
 
-    <org.forgerock.authenticator.add.ScanWindowFrameLayout
+    <com.forgerock.authenticator.add.ScanWindowFrameLayout
         android:id="@+id/window"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -52,7 +52,7 @@
             android:layout_margin="16dp"
             android:indeterminate="true"
             />
-    </org.forgerock.authenticator.add.ScanWindowFrameLayout>
+    </com.forgerock.authenticator.add.ScanWindowFrameLayout>
 
     <TextView
         android:id="@+id/textview"
