--- a/app/src/main/res/layout/notifications.xml
+++ b/app/src/main/res/layout/notifications.xml
@@ -15,13 +15,12 @@
   ~ Copyright 2016 ForgeRock AS.
   -->
 
+
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/core_layout"
-    >
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
         android:id="@+id/empty"
@@ -29,7 +28,7 @@
         android:layout_height="match_parent"
         android:padding="8dp"
         android:gravity="center"
-        android:text="@string/no_identities"
+        android:text="No notifications received"
         />
 
     <GridView
