--- a/app/src/main/res/layout/pushauth.xml
+++ b/app/src/main/res/layout/pushauth.xml
@@ -21,53 +21,103 @@
 	android:layout_height="match_parent"
 	>
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/heading"
-            android:layout_width="wrap_content"
-            android:layout_marginRight="60dp"
-            android:layout_centerHorizontal="true"
-            android:layout_height="96dp"
-            android:padding="8dp"
-            android:gravity="center"
-            android:text="Push message"
-            />
+        android:layout_height="180dp"
+        android:background="@color/sea_green">
+
         <ImageButton
             android:id="@+id/cancel"
-            android:src="@drawable/ic_action_edit"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_width="50dp"
-            android:layout_height="50dp" />
-    </RelativeLayout>
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="96dp"
-        android:padding="8dp"
-        android:gravity="center"
-        android:text="Push message 2"
-        />
-    <TextView
-        android:id="@+id/message"
-        android:layout_width="match_parent"
-        android:layout_height="96dp"
-        android:padding="8dp"
-        android:gravity="center"
-        android:text="Push message 3"
-        />
+            android:src="@drawable/forgerock_icon_deny"
+            android:layout_gravity="right"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp" />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:padding="10dp"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/forgerock_logo"
+            android:scaleType="fitCenter"
+            android:layout_weight="5"
+            />
+        <TextView
+            android:id="@+id/question"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Log into ForgeRock?"
+            android:textSize="15sp"
+            android:layout_weight="1"
+            />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
 
-    <com.forgerock.authenticator.ConfirmationSwipeBar
-        android:id="@+id/slideToConfirm"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="25dp"
-        android:layout_marginLeft="25dp"
-        android:clickable="false"
-        android:max="100"
-        android:progress="0"
-        android:progressDrawable="@android:color/darker_gray"
-    android:thumb="@drawable/ic_launcher" />
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:background="@color/light_gray"
+            android:layout_above="@+id/seperator">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:weightSum="1">
+                    <Space
+                        android:layout_width="1dp"
+                        android:layout_height="1dp"
+                        android:layout_weight="0.25"/>
+                    <com.forgerock.authenticator.ui.ConfirmationSwipeBar
+                        android:id="@+id/slideToConfirm"
+                        android:gravity="center_horizontal"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.5"
+                        android:clickable="false"
+                        android:max="100"
+                        android:progress="0"
+                        android:progressDrawable="@android:color/darker_gray"
+                        android:thumb="@drawable/ic_launcher" />
+                    <Space
+                        android:layout_width="1dp"
+                        android:layout_height="1dp"
+                        android:layout_weight="0.25"/>
+            </LinearLayout>
+        </RelativeLayout>
+        <View
+            android:id="@+id/seperator"
+            android:layout_above="@+id/moreinfolayout"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"/>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:id="@+id/moreinfolayout"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true">
+            <TextView
+                android:gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
+                android:text="Swipe switch to authorize" />
+        </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
