--- a/app/src/main/res/layout/tokencell.xml
+++ b/app/src/main/res/layout/tokencell.xml
@@ -16,7 +16,7 @@
 
   Portions Copyright 2013 Nathaniel McCallum, Red Hat
 -->
-<com.forgerock.authenticator.mechanisms.oath.TokenLayout
+<com.forgerock.authenticator.mechanisms.oath.OathLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:freeotp="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -32,7 +32,7 @@
         android:scaleType="fitCenter"
         />
 
-    <com.forgerock.authenticator.ProgressCircle
+    <com.forgerock.authenticator.ui.ProgressCircle
         android:id="@+id/progressInner"
         android:layout_width="96dp"
         android:layout_height="96dp"
@@ -41,7 +41,7 @@
         freeotp:max="1000"
         />
 
-    <com.forgerock.authenticator.ProgressCircle
+    <com.forgerock.authenticator.ui.ProgressCircle
         android:id="@+id/progressOuter"
         android:layout_width="96dp"
         android:layout_height="96dp"
@@ -84,4 +84,4 @@
         android:paddingBottom="12dp"
         android:src="@drawable/menu"
         />
-</com.forgerock.authenticator.mechanisms.oath.TokenLayout>
+</com.forgerock.authenticator.mechanisms.oath.OathLayout>
