--- a/app/src/main/res/layout/tokencell.xml
+++ b/app/src/main/res/layout/tokencell.xml
@@ -16,7 +16,7 @@
 
   Portions Copyright 2013 Nathaniel McCallum, Red Hat
 -->
-<com.forgerock.authenticator.mechanisms.TOTP.TokenLayout
+<com.forgerock.authenticator.mechanisms.oath.TokenLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:freeotp="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -84,4 +84,4 @@
         android:paddingBottom="12dp"
         android:src="@drawable/menu"
         />
-</com.forgerock.authenticator.mechanisms.TOTP.TokenLayout>
+</com.forgerock.authenticator.mechanisms.oath.TokenLayout>
