--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,10 @@
     <color name="black_overlay">#66000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="sea_green">#519387</color>
+    <color name="account_background">#3DB4B3</color>
+    <color name="normal_timer_color">#30A09D</color>
+    <color name="warning_timer_color">#A94442</color>
+    <color name="notification_badge">#FF4829</color>
     <color name="off_white">#f7f7f7</color>
     <color name="light_gray">#eee</color>
     <color name="border_gray">#ddd</color>
