--- a/app/src/main/res/layout/delete.xml
+++ b/app/src/main/res/layout/delete.xml
@@ -42,7 +42,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/forgerock_logo" />
+                android:src="@drawable/forgerock_placeholder" />
 
             <LinearLayout
                 android:layout_width="match_parent"
