--- a/app/src/main/res/layout/identitycell.xml
+++ b/app/src/main/res/layout/identitycell.xml
@@ -16,37 +16,93 @@
 
   Portions Copyright 2013 Nathaniel McCallum, Red Hat
 -->
-<com.forgerock.authenticator.identity.IdentityLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.forgerock.authenticator.identity.IdentityLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/token"
-    >
+    android:layout_height="96dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/token">
     <ImageView
         android:id="@+id/image"
-        android:layout_width="96dp"
+        android:layout_width="80dp"
         android:layout_height="96dp"
+        android:padding="10dp"
         android:layout_gravity="left"
-        android:src="@drawable/forgerock_logo"
+        android:src="@drawable/forgerock_placeholder"
         android:scaleType="fitCenter"
         />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="150dp"
         android:layout_height="48dp"
-        android:layout_marginLeft="96dp"
-        android:layout_marginTop="48dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="32dp"
+        android:layout_toRightOf="@+id/image"
+        android:layout_toEndOf="@+id/image"
+        android:layout_centerVertical="true"
         android:orientation="vertical">
-        <include layout="@layout/titles" />
+        <TextView
+            android:id="@+id/issuer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="4dp"
+            android:ellipsize="end"
+            android:gravity="left|center"
+            android:singleLine="true"
+            android:text="ForgeRock"
+            android:textColor="@android:color/primary_text_light"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:gravity="left|center"
+            android:singleLine="true"
+            tools:text="joe.bloggs"
+            android:textColor="@android:color/secondary_text_light"
+            android:textSize="12sp"
+            android:textStyle="normal" />
+    </LinearLayout>
+
+    <GridView
+        android:id="@+id/grid"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:columnWidth="250dp"
+        android:gravity="center"
+        android:horizontalSpacing="8dp"
+        android:numColumns="auto_fit"
+        android:padding="8dp"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="8dp"
+        android:background="#E5E5E5"
+        />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_toLeftOf="@+id/menu"
+        android:gravity="center_vertical">
+
+    <com.forgerock.authenticator.ui.MechanismIcon
+        android:id="@+id/iconA"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <com.forgerock.authenticator.ui.MechanismIcon
+        android:id="@+id/iconB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     </LinearLayout>
 
     <ImageView
         android:id="@+id/menu"
         android:layout_width="32dp"
         android:layout_height="48dp"
-        android:layout_gravity="bottom|right"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
         android:src="@drawable/menu"
