--- a/app/src/main/res/layout/metadata.xml
+++ b/app/src/main/res/layout/metadata.xml
@@ -24,7 +24,7 @@
         android:layout_height="104dp"
         android:padding="4dp"
         android:scaleType="centerInside"
-        android:src="@drawable/forgerock_logo" />
+        android:src="@drawable/forgerock_placeholder" />
 
     <EditText
         android:id="@+id/issuer"
