--- a/app/src/main/res/layout/pushcell.xml
+++ b/app/src/main/res/layout/pushcell.xml
@@ -17,34 +17,29 @@
 <com.forgerock.authenticator.mechanisms.push.PushLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="72dp"
     android:background="@drawable/token"
     >
+
+    <com.forgerock.authenticator.ui.MechanismIcon
+        android:id="@+id/icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/menu"
+        android:layout_gravity="center_vertical"
+        android:layout_centerVertical="true" />
 
     <TextView
         android:id="@+id/Type"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginLeft="12dp"
+        android:layout_marginLeft="60dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         android:gravity="left|center"
-        android:text="Push"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        android:typeface="monospace"
+        android:text="Push Authentication"
+        android:textSize="20sp"
         />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="48dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="32dp"
-        android:orientation="vertical">
-        <include layout="@layout/titles" />
-    </LinearLayout>
 
     <ImageView
         android:id="@+id/menu"
