--- a/app/src/main/res/layout/tokencell.xml
+++ b/app/src/main/res/layout/tokencell.xml
@@ -20,59 +20,65 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:freeotp="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="72dp"
     android:background="@drawable/token"
     >
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:layout_gravity="left"
-        android:src="@drawable/forgerock_logo"
-        android:scaleType="fitCenter"
-        />
-
-    <com.forgerock.authenticator.ui.ProgressCircle
-        android:id="@+id/progressInner"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:padding="28dp"
-        freeotp:hollow="false"
-        freeotp:max="1000"
-        />
+    <com.forgerock.authenticator.ui.MechanismIcon
+        android:id="@+id/icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_centerVertical="true" />
 
     <com.forgerock.authenticator.ui.ProgressCircle
         android:id="@+id/progressOuter"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:padding="24dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:padding="5dp"
+        android:layout_gravity="right|center_vertical"
+        android:layout_marginRight="32dp"
         freeotp:hollow="true"
         freeotp:max="1000"
+        />
+
+    <ImageView
+        android:id="@+id/refresh"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:padding="5dp"
+        android:layout_gravity="right|center_vertical"
+        android:layout_marginRight="32dp"
+        android:src="@drawable/forgerock_icon_refresh"
+        />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginLeft="60dp">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:gravity="left|center"
+        android:text="One-time Password"
+        android:textSize="20sp"
         />
 
     <TextView
         android:id="@+id/code"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginLeft="96dp"
+        android:layout_height="40dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:gravity="left|center"
-        android:text="01234567"
+        android:gravity="left|bottom"
+        android:text="123 456"
         android:textSize="34sp"
         android:textStyle="bold"
         android:typeface="monospace"
         />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginLeft="96dp"
-        android:layout_marginTop="48dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="32dp"
-        android:orientation="vertical">
-        <include layout="@layout/titles" />
     </LinearLayout>
 
     <ImageView
