--- a/app/src/main/res/layout/pushcell.xml
+++ b/app/src/main/res/layout/pushcell.xml
@@ -17,37 +17,44 @@
 <com.forgerock.authenticator.mechanisms.push.PushLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="72dp"
+    android:layout_height="96dp"
     android:background="@drawable/token"
     >
-
-    <com.forgerock.authenticator.ui.MechanismIcon
-        android:id="@+id/icon"
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/menu"
-        android:layout_gravity="center_vertical"
-        android:layout_centerVertical="true" />
+        android:layout_height="match_parent">
+        <com.forgerock.authenticator.ui.MechanismIcon
+            android:id="@+id/icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true" />
 
-    <TextView
-        android:id="@+id/Type"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginLeft="60dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:gravity="left|center"
-        android:text="Push Authentication"
-        android:textSize="20sp"
-        />
 
-    <ImageView
-        android:id="@+id/menu"
-        android:layout_width="32dp"
-        android:layout_height="48dp"
-        android:layout_gravity="bottom|right"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        android:src="@drawable/menu"
-        />
+        <TextView
+            android:id="@+id/Type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/menu"
+            android:layout_toRightOf="@+id/icon"
+            android:text="Push Authentication"
+            android:textSize="20sp"
+            />
+
+        <ImageView
+            android:id="@+id/menu"
+            android:layout_width="32dp"
+            android:layout_height="48dp"
+            android:layout_gravity="bottom|right"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:src="@drawable/menu"
+            />
+    </RelativeLayout>
 </com.forgerock.authenticator.mechanisms.push.PushLayout>
