--- a/app/src/main/res/layout/notificationtitle.xml
+++ b/app/src/main/res/layout/notificationtitle.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ The contents of this file are subject to the terms of the Common Development and
   ~ Distribution License (the License). You may not use this file except in compliance with the
@@ -14,28 +15,18 @@
   ~
   ~ Copyright 2016 ForgeRock AS.
   -->
-
-
 <RelativeLayout
-    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="40dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
+    android:background="@color/light_gray">
     <TextView
-        android:id="@+id/empty"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="8dp"
-        android:gravity="center"
-        android:text="No notifications received"
-        />
+        android:id="@+id/heading_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Default"
+        android:padding="10dp"
+        android:textColor="@color/dark_gray"
+        android:layout_alignParentBottom="true" />
 
-    <ExpandableListView
-        android:id="@+id/notification_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:groupIndicator="@android:color/transparent">
-
-    </ExpandableListView>
 </RelativeLayout>
