--- a/app/src/main/res/layout/tokencell.xml
+++ b/app/src/main/res/layout/tokencell.xml
@@ -20,9 +20,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:freeotp="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="72dp"
+    android:layout_height="96dp"
     android:background="@drawable/token"
     >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <com.forgerock.authenticator.ui.MechanismIcon
         android:id="@+id/icon"
         android:layout_width="wrap_content"
@@ -35,8 +38,9 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:padding="5dp"
-        android:layout_gravity="right|center_vertical"
-        android:layout_marginRight="32dp"
+        android:layout_toLeftOf="@id/menu"
+        android:layout_marginRight="16dp"
+        android:layout_centerVertical="true"
         freeotp:hollow="true"
         freeotp:max="1000"
         />
@@ -46,39 +50,41 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:padding="5dp"
-        android:layout_gravity="right|center_vertical"
-        android:layout_marginRight="32dp"
+        android:layout_toLeftOf="@id/menu"
+        android:layout_marginRight="16dp"
+        android:layout_centerVertical="true"
         android:src="@drawable/forgerock_icon_refresh"
         />
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:orientation="vertical"
         android:layout_marginLeft="60dp">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:gravity="left|center"
-        android:text="One-time Password"
-        android:textSize="20sp"
-        />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:gravity="left|center"
+            android:text="One-time Password"
+            android:textSize="20sp"
+            />
 
-    <TextView
-        android:id="@+id/code"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:gravity="left|bottom"
-        android:text="123 456"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        android:typeface="monospace"
-        />
+        <TextView
+            android:id="@+id/code"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:gravity="left|bottom"
+            android:text="123 456"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            android:typeface="monospace"
+            />
     </LinearLayout>
 
     <ImageView
@@ -89,5 +95,9 @@
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
         android:src="@drawable/menu"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         />
+
+    </RelativeLayout>
 </com.forgerock.authenticator.mechanisms.oath.OathLayout>
