--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -25,10 +25,9 @@
         android:title="@string/scan_qr_code" />
 
     <item
-        android:id="@+id/action_settings"
-        android:icon="@drawable/forgerock_icon_settings"
-        android:showAsAction="ifRoom"
-        android:title="Settings" />
+        android:id="@+id/action_about"
+        android:showAsAction="never"
+        android:title="About" />
 
 </menu>
 
