AME-10393 AME-10408 Implement security protocol for registration and authentication

--- a/app/src/main/res/layout/delete.xml
+++ b/app/src/main/res/layout/delete.xml
@@ -38,7 +38,7 @@
             android:layout_marginRight="16dp"
             android:orientation="horizontal">
             <ImageView
-                android:id="@+id/imageURL"
+                android:id="@+id/image"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:scaleType="fitCenter"
