--- a/app/src/main/res/layout/mechanism.xml
+++ b/app/src/main/res/layout/mechanism.xml
@@ -23,6 +23,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
+        android:id="@+id/header"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="180dp"
@@ -31,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="20dp" />
         <com.forgerock.authenticator.ui.CircleImageView
-            android:id="@+id/imageURL"
+            android:id="@+id/image"
             android:layout_width="96dp"
             android:layout_height="96dp"
             android:layout_gravity="center_horizontal"
