--- a/app/src/main/res/layout/scan.xml
+++ b/app/src/main/res/layout/scan.xml
@@ -35,7 +35,7 @@
         android:layout_gravity="center"
         android:layout_margin="64dp">
         <ImageView
-            android:id="@+id/imageURL"
+            android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
