--- a/app/src/main/res/layout/identitycell.xml
+++ b/app/src/main/res/layout/identitycell.xml
@@ -22,7 +22,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/token">
     <ImageView
-        android:id="@+id/image"
+        android:id="@+id/imageURL"
         android:layout_width="80dp"
         android:layout_height="96dp"
         android:padding="10dp"
@@ -34,8 +34,8 @@
     <LinearLayout
         android:layout_width="150dp"
         android:layout_height="48dp"
-        android:layout_toRightOf="@+id/image"
-        android:layout_toEndOf="@+id/image"
+        android:layout_toRightOf="@+id/imageURL"
+        android:layout_toEndOf="@+id/imageURL"
         android:layout_centerVertical="true"
         android:orientation="vertical">
         <TextView
