--- a/app/src/main/res/layout/mechanism.xml
+++ b/app/src/main/res/layout/mechanism.xml
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="20dp" />
         <com.forgerock.authenticator.ui.CircleImageView
-            android:id="@+id/image"
+            android:id="@+id/imageURL"
             android:layout_width="96dp"
             android:layout_height="96dp"
             android:layout_gravity="center_horizontal"
