--- a/app/src/main/res/layout/metadata.xml
+++ b/app/src/main/res/layout/metadata.xml
@@ -19,7 +19,7 @@
     android:layout_height="wrap_content">
     <ImageButton
         style="?android:borderlessButtonStyle"
-        android:id="@+id/image"
+        android:id="@+id/imageURL"
         android:layout_width="104dp"
         android:layout_height="104dp"
         android:padding="4dp"
@@ -30,7 +30,7 @@
         android:id="@+id/issuer"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_toRightOf="@id/image"
+        android:layout_toRightOf="@id/imageURL"
         android:layout_marginTop="4dp"
         android:hint="jdoe@example.com"
         android:inputType="textNoSuggestions"
@@ -40,7 +40,7 @@
         android:id="@+id/label"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_toRightOf="@id/image"
+        android:layout_toRightOf="@id/imageURL"
         android:layout_below="@id/issuer"
         android:layout_marginBottom="4dp"
         android:hint="18c5d06cfcbd4927"
