--- a/app/src/main/res/layout/notificationcell.xml
+++ b/app/src/main/res/layout/notificationcell.xml
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
-            android:id="@+id/image"
+            android:id="@+id/imageURL"
             android:layout_width="78dp"
             android:layout_height="78dp"
             android:padding="20dp"
@@ -37,8 +37,8 @@
             android:id="@+id/text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/image"
-            android:layout_toEndOf="@id/image"
+            android:layout_toRightOf="@id/imageURL"
+            android:layout_toEndOf="@id/imageURL"
             android:layout_centerVertical="true"
             android:orientation="vertical">
             <TextView
